# obsidian-http-mcp

./: .gitignore  Dockerfile  README.md  docker_run.sh  pyproject.toml  server.py  test_client.py
scripts/: docker_run.sh  pytest_run.sh  python_run_test_client.sh
src/obsidian_http_mcp/: authentication.py  server.py  test_client.py  vault.py
tests/: python_client.py  test_mcp.py
